PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.command-python-setup-py-egg-info-failed-with-error-code-1-in-tmp-pip-install.txt
<div class="post-text" itemprop="text">
<p>pip3 install poster</p>
<p>Looking in indexes: <a href="http://mirrors.aliyun.com/pypi/simple/" rel="nofollow noreferrer">http://mirrors.aliyun.com/pypi/simple/</a></p>
<p>Collecting poster</p>
<p>Downloading 
<a href="http://mirrors.aliyun.com/pypi/packages/9f/dc/0683a458d21c3d561ab2f71b4fcdd812bf04e55c54e560b0854cea95610e/poster-0.8.1.tar.gz" rel="nofollow noreferrer">http://mirrors.aliyun.com/pypi/packages/9f/dc/0683a458d21c3d561ab2f71b4fcdd812bf04e55c54e560b0854cea95610e/poster-0.8.1.tar.gz</a></p>
<pre><code>Complete output from command python setup.py egg_info:

Traceback (most recent call last):

  File "&lt;string&gt;", line 1, in &lt;module&gt;

  File "/tmp/pip-install-_p77_6kw/poster/setup.py", line 2, in &lt;module&gt;
    import poster
  File "/tmp/pip-install-_p77_6kw/poster/poster/__init__.py", line 29, in &lt;module&gt;
    import poster.streaminghttp
  File "/tmp/pip-install-_p77_6kw/poster/poster/streaminghttp.py", line 61
    print "send:", repr(value)
                ^
SyntaxError: invalid syntax

----------------------------------------
</code></pre>
<p>Command "python setup.py egg_info" failed with error code 1 in /tmp/pip-install-_p77_6kw/poster/</p>
<p>this question may python2 and python3 with here？ help mi</p>
</div>
<div class="post-text" itemprop="text">
<p>According to <a href="https://bitbucket.org/chrisatlee/poster/issues/24/not-working-with-python3" rel="nofollow noreferrer">issue #24</a> in <a href="https://bitbucket.org/chrisatlee/poster" rel="nofollow noreferrer">the poster repository on bitbucket</a>, poster only works on python versions 2.4 to 2.7. You'll need to either use python2 for your project, port the poster code to python3 yourself, or find another solution.</p>
</div>
<div class="post-text" itemprop="text">
<p><a href="https://github.com/wangzilong1997/poster-0.8.1" rel="nofollow noreferrer">github</a> may can help y use 2to3 at poster</p>
</div>
<span class="comment-copy">i do not know what i can do the version issues</span>
<span class="comment-copy">where i can get poster at python3</span>
<span class="comment-copy">is over i kill it</span>
<span class="comment-copy">thinks try again：）</span>
<span class="comment-copy">but  not i can do in ubantu</span>
<span class="comment-copy">i think so but have the other on question</span>
